{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 124,
  "lineage": "83dbef1d-2103-863d-f263-6fd2e242f6ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f97bb1381fb9d90e",
            "domain": "vpc",
            "id": "eipalloc-0f97bb1381fb9d90e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-169-37-232.compute-1.amazonaws.com",
            "public_ip": "35.169.37.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-1"
            },
            "tags_all": {
              "Name": "EIP-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d3e095807cdb07c",
            "domain": "vpc",
            "id": "eipalloc-01d3e095807cdb07c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-18-181.compute-1.amazonaws.com",
            "public_ip": "52.71.18.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-2"
            },
            "tags_all": {
              "Name": "EIP-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:internet-gateway/igw-061df89ebb687d32e",
            "id": "igw-061df89ebb687d32e",
            "owner_id": "182232283818",
            "tags": {
              "Name": "vault"
            },
            "tags_all": {
              "Name": "vault"
            },
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "dependencies": [
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f97bb1381fb9d90e",
            "association_id": "eipassoc-0608a1280bb0775f0",
            "connectivity_type": "public",
            "id": "nat-0d257ff0c668e25d9",
            "network_interface_id": "eni-01c5b9620d538cccb",
            "private_ip": "10.0.83.87",
            "public_ip": "35.169.37.232",
            "subnet_id": "subnet-0a44530ca72d4eb62",
            "tags": {
              "Name": "Nat-1"
            },
            "tags_all": {
              "Name": "Nat-1"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vault",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d3e095807cdb07c",
            "association_id": "eipassoc-0d143248cc19246a9",
            "connectivity_type": "public",
            "id": "nat-054be3f982fbd608f",
            "network_interface_id": "eni-0d30a7965d13e8aa9",
            "private_ip": "10.0.105.70",
            "public_ip": "52.71.18.181",
            "subnet_id": "subnet-020b4c250b8252f49",
            "tags": {
              "Name": "Nat-2"
            },
            "tags_all": {
              "Name": "Nat-2"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vault",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:route-table/rtb-097eb7e9e36c9248b",
            "id": "rtb-097eb7e9e36c9248b",
            "owner_id": "182232283818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d257ff0c668e25d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vault",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:route-table/rtb-03f374d074844a7ca",
            "id": "rtb-03f374d074844a7ca",
            "owner_id": "182232283818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-054be3f982fbd608f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vault",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:route-table/rtb-0f974eda46d96ec7d",
            "id": "rtb-0f974eda46d96ec7d",
            "owner_id": "182232283818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061df89ebb687d32e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vault",
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0637eac3e49f9d395",
            "route_table_id": "rtb-097eb7e9e36c9248b",
            "subnet_id": "subnet-0bb5e62d32e717c72"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vault",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09381dd8ca8403bde",
            "route_table_id": "rtb-03f374d074844a7ca",
            "subnet_id": "subnet-091a928e475dca75a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vault",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e12f9767ca6708",
            "route_table_id": "rtb-0f974eda46d96ec7d",
            "subnet_id": "subnet-0a44530ca72d4eb62"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vault",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07937e3d9a5726dec",
            "route_table_id": "rtb-0f974eda46d96ec7d",
            "subnet_id": "subnet-020b4c250b8252f49"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vault",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:subnet/subnet-0bb5e62d32e717c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb5e62d32e717c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182232283818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "dependencies": [
            "aws_vpc.vpc_vault"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:subnet/subnet-091a928e475dca75a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091a928e475dca75a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182232283818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "dependencies": [
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:subnet/subnet-0a44530ca72d4eb62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a44530ca72d4eb62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182232283818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "dependencies": [
            "aws_vpc.vpc_vault"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:subnet/subnet-020b4c250b8252f49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020b4c250b8252f49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182232283818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/vault": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03b6e3ac7ec265a16"
          },
          "dependencies": [
            "aws_vpc.vpc_vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182232283818:vpc/vpc-03b6e3ac7ec265a16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0713d63a60e56300f",
            "default_route_table_id": "rtb-047ab9338d0c8e7d2",
            "default_security_group_id": "sg-04a0beec9829fa2dd",
            "dhcp_options_id": "dopt-0767cca26ac362dd7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b6e3ac7ec265a16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047ab9338d0c8e7d2",
            "owner_id": "182232283818",
            "tags": {
              "Name": "vault"
            },
            "tags_all": {
              "Name": "vault"
            }
          }
        }
      ]
    }
  ]
}